TAG: egload-6-0-5-1
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key != 2  changed to "= 1"

TAG: egload-6-0-4-1
DATE: 04/29/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: egload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: egload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: egload-tr11750-BP
DATE: 04/28/2015
STAFF: kstone

TAG: egload-5-1-1-1
DATE: 11/02/2012
STAFF: dbm
CHANGES:
1) Config changes for TR11163

TAG: egload-5-0-0-2
TAG: egload-5-0-0-1
DATE: 04/09/2012
STAFF: lec
CHANGES: 
1) bin/formatreports.py
   fix call of mgiAndor->report_db.create_accession_anchor

TAG: egload-4-4-1-2
DATE: 03/21/2011
STAFF: lec
CHANGES: TR10635
	 move bucket_zero_to_one_mgiid (with mgi ids) 
	 move create bucket_zero_to_one_nomgiid (without mgi ids)
	 from ".sh" to ".py"

TAG: egload-4-4-1-1
DATE: 02/01/2011
STAFF: lec
CHANGES: TR10564/bin/formatreports.sh
	 create bucket_zero_to_one_mgiid (with mgi ids)
	 create bucket_zero_to_one_nomgiid (without mgi ids)

TAG: egload-4-3-3-2
DATE: 04/27/2010
STAFF: lec
CHANGES: TR9777/sql/MGDdelete.sql
         remove deletes for J:53168 (swissload)

TAG: egload-4-3-3-1
DATE: 03/11/2010
STAFF: sc
CHANGES: Merge tr9773 branch to trunk

TAG: egload-tr9773-4
DATE: 03/08/2010
STAFF: sc
CHANGES: MGI 4.33 TR9773 Links to Gene Model Evidence
1) Added comments

TAG: egload-tr9773-3
DATE: 02/18/2010
STAFF: sc
CHANGES: MGI 4.33 TR9773 Links to Gene Model Evidence
1) java/org/jax/mgi/app/entrezGene/EntrezGeneBucketizer.java
   removed restriction for NG sequences associations being 
   created only if associated with only one marker

TAG: egload-tr9773-2
DATE: 02/17/2010
STAFF: sc
CHANGES: MGI 4.33 TR9773 Links to Gene Model Evidence
1) egload.sh - updated to use checkStatus function
2) radarPreprocess.sh - tweaked to include only C57 reference genome