@@ -1,0 +1,4 @@
+classes/
+egload.config
+egload.jar
+javadocs/
