@@ -37,9 +37,6 @@ import string
 import db
 import reportlib
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 CRT = reportlib.CRT
 TAB = reportlib.TAB
 
