@@ -28,9 +28,6 @@ import string
 import db
 import reportlib
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 #
 # Constants
 #
