@@ -1,3 +1,9 @@
+TAG: egload-6-0-7-1
+DATE: 01/05/2017
+STAFF: lec 
+CHANGES:
+1) TR12069/obsolete db.setAutoTranslate()
+
 TAG: egload-6-0-5-1
 DATE: 09/01/2016
 STAFF: lec 
